--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@
 }
 
 .btn.btn-primary {
-    box-shadow: inset 0 0 0 0 var(--bs-primary);
+    box-shadow: inset 0 0 20px 20px var(--bs-primary);
 }
 
 .btn.btn-primary:hover {
@@ -76,7 +76,7 @@
 }
 
 .btn.btn-light {
-    box-shadow: inset 0 0 0 0 var(--bs-primary);
+    box-shadow: inset 0 0 20px 20px var(--bs-primary);
 }
 
 .btn.btn-light:hover {
@@ -174,11 +174,11 @@
     color: var(--bs-white) !important;
 }
 
-.navbar-light .navbar-brand h1 {
+.navbar-light .navbar-brand h3 {
     color: var(--bs-white);
 }
 
-.sticky-top.navbar-light .navbar-brand h1 {
+.sticky-top.navbar-light .navbar-brand h3 {
     color: var(--bs-primary);
 }
 
@@ -233,7 +233,7 @@
         background: var(--bs-white);
     }
 
-    .navbar-light .navbar-brand h1 {
+    .navbar-light .navbar-brand h3 {
         color: var(--bs-primary);
     }
 
@@ -290,7 +290,9 @@
         transition: .5s;
         z-index: -1;
     }
-
+.login{
+     box-shadow: inset 0 0 20px 20px var(--bs-primary);
+}
     .navbar-light .navbar-nav .nav-link:hover::before,
     .navbar-light .navbar-nav .nav-link.active::before {
         height: calc(100% + 1px);
